--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,12 +7,16 @@
                 <p>Photos from all over the world!</p>
             </div>
         </div>
-        <%photos.forEach(function(photo){ %>
-            <div>
-                <h2><%= photo.title%></h2>
-                <img src="<%= photo.image%>"></img>
-            </div>
-        <% }) %>
+        <div class="col-md-4">
+            <%photos.forEach(function(photo){ %>
+                <div>
+                    <h2><%= photo.title%></h2>
+                    <img class="thumbnail" src="<%= photo.image%>"></img>
+                    <p class="text-muted"><%= photo.created.toDateString()%></p>
+                    <p><%= photo.description.substring(0,100)%>...</p>
+                </div>
+            <% }) %>
+        </div>
     </div>
 
 <% include ./partials/footer%>
