create new and create routes, basic pages for each

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,7 +15,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">TvPhApp</a>
+              <a class="navbar-brand" href="/photos">TvPhApp</a>
             </div>
         
             <!-- Collect the nav links, forms, and other content for toggling -->
