--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,17 +7,17 @@
                 <p>Photos from all over the world!</p>
             </div>
         </div>
-        <div class="col-md-4">
+        
             <%photos.forEach(function(photo){ %>
-                <div>
-                    <h2><%= photo.title%></h2>
-                    <img class="thumbnail" src="<%= photo.image%>"></img>
+                <div class="col-md-4">
+                    <h2 class="text-center"><%= photo.title%></h2>
+                    <img class="img-thumbnail" src="<%= photo.image%>"></img>
                     <p class="text-muted"><%= photo.created.toDateString()%></p>
                     <p><%= photo.description.substring(0,100)%>...</p>
                     <p><a href="/photos/<%= photo._id%>">Show More</a></p>
                 </div>
             <% }) %>
-        </div>
+        
     </div>
 
 <% include ./partials/footer%>
