--- a/views/show.ejs
+++ b/views/show.ejs
@@ -10,7 +10,9 @@
                 <p class="text-muted"><%= photo.created.toDateString()%></p>
                 <p><%= photo.description%></p>
                 <a href="/photos" class="btn btn-xs btn-primary">Go Back</a>
-                <a href="#" class="btn btn-xs btn-danger">Delete</a>
+                <form action="/photos/<%= photo._id%>?_method=DELETE" method="POST">
+                    <button class="btn btn-xs btn-danger">Delete</button>
+                </form>
             </div>
         </div>
     </div>
